# skill-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LIMITATIONS.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dataset/: README.md  adversarial_catalog.jsonl  catalog.jsonl  ood_catalog.jsonl  ood_unsafe_catalog.jsonl
dataset/adversarial/aws-cli-s3/: SKILL.md
dataset/adversarial/b64-pipe-bash/: SKILL.md
dataset/adversarial/chmod-setuid/: SKILL.md
dataset/adversarial/cron-persistence/: SKILL.md
dataset/adversarial/curl-pipe-zsh/: SKILL.md
dataset/adversarial/curl-public-api/: SKILL.md
dataset/adversarial/doc-security-words/: SKILL.md
dataset/adversarial/docker-socket/: SKILL.md
dataset/adversarial/env-curl/: SKILL.md
dataset/adversarial/fs-read-env-fetch/: SKILL.md
dataset/adversarial/git-readonly/: SKILL.md
dataset/adversarial/homoglyph-ignore/: SKILL.md
dataset/adversarial/node-exec-curl-bash/: SKILL.md
dataset/adversarial/npm-git-ssh/: SKILL.md
dataset/adversarial/open-aws-creds/: SKILL.md
dataset/adversarial/pathlib-dot-ssh/: SKILL.md
dataset/adversarial/pip-index-url/: SKILL.md
dataset/adversarial/pip-pin/: SKILL.md
dataset/adversarial/placeholder-key/: SKILL.md
dataset/adversarial/powershell-iex/: SKILL.md
dataset/adversarial/powershell-rm/: SKILL.md
dataset/adversarial/py-home-ssh-upload/: SKILL.md
dataset/adversarial/python-requests-files/: SKILL.md
dataset/adversarial/rm-r-f-root/: SKILL.md
dataset/adversarial/scp-exfil/: SKILL.md
dataset/adversarial/script-only-python-ssh/: SKILL.md
dataset/adversarial/script-only-python-ssh/scripts/: fmt.py
dataset/adversarial/split-var-bash/: SKILL.md
dataset/adversarial/symlink-escape/: SKILL.md
dataset/adversarial/tar-pipe-sh/: SKILL.md
dataset/adversarial/wget-and-bash/: SKILL.md
dataset/fixtures/benign/changelog-writer/: SKILL.md
dataset/fixtures/benign/code-review-rubric/: SKILL.md
dataset/fixtures/benign/docs-to-skill/: SKILL.md
dataset/fixtures/benign/git-commit-helper/: SKILL.md
dataset/fixtures/benign/meeting-notes-md/: SKILL.md
dataset/fixtures/benign/pdf-summarize/: SKILL.md
dataset/fixtures/benign/sql-explain/: SKILL.md
dataset/fixtures/benign/tdd-checklist/: SKILL.md
dataset/ood/: README.md  SOURCES.md
dataset/ood_unsafe/wild-b64-shell/: SKILL.md
dataset/ood_unsafe/wild-curl-ssh-form/: SKILL.md
dataset/ood_unsafe/wild-env-pipe-curl/: SKILL.md
dataset/ood_unsafe/wild-indirect-subshell/: SKILL.md
dataset/ood_unsafe/wild-ps-b64-iex/: SKILL.md
dataset/ood_unsafe/wild-py-exec-b64/: SKILL.md
dataset/ood_unsafe/wild-ruby-ssh/: SKILL.md
dataset/ood_unsafe/wild-split-key/: SKILL.md
docs/: BENCHMARKS.md  DECISIONS.md  DETECTOR-FREEZE.md  NEXT-SESSION.md  P0-WEEK1.md  REAL-SCAN-BACKLOG.md  RULES.md
eval/: run_eval.py  selftest.py
skills/skill-guard/: SKILL.md
src/skill_guard/: __init__.py  __main__.py  analyze.py  cli.py  config.py  context_tone.py  engine.py  models.py  normalize.py  paths.py  report.py  sarif.py  surface.py
src/skill_guard/analysis/: __init__.py  lang_js.py  lang_powershell.py  lang_python.py  shell_tokens.py
src/skill_guard/parser/: __init__.py  package.py
src/skill_guard/rules/: __init__.py  bloat.py  enterprise.py  exfil.py  identity.py  injection.py  secrets.py  shell.py  structure.py  supply_chain.py
tests/: conftest.py  test_adversarial_gate.py  test_cli.py  test_ecc_fp_precision.py  test_eval_gate.py  test_fence_lang.py  test_fp_signals.py  test_known_misses.py  test_lang_detectors.py  test_models.py  test_models_helpers.py  test_normalize.py  test_ood_gate.py  test_parser.py  test_policy_pack.py  test_report.py  test_rules.py  test_sarif_config.py  test_shell_engine.py  test_supply_chain_context.py  test_surface.py
(+26 files in other folders)
