[project]
name = "skill-guard"
version = "0.2.0"
description = "Audit Agent Skills and packages before they touch your machine. Deterministic checks. Exit codes. No vibes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "aisona-lab" }]
keywords = [
    "agent-skills",
    "skill-security",
    "supply-chain",
    "ai-security",
    "guardrails",
    "claude-code",
    "mcp",
    "linter",
]
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/aisona-lab/skill-guard"
Homepage = "https://github.com/aisona-lab/skill-guard"

[project.scripts]
skill-guard = "skill_guard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_guard"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
pythonpath = ["src"]
markers = [
    "eval: dataset / precision-recall harness",
    "selftest: rule good/bad reference gates",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # security patterns and evidence strings need length

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["skill_guard"]
mypy_path = "src"
